objects/adapps__OptimizerPlus_Path_Assistant_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Path_Assistant__c</fullName>
        <label>Path</label>
        <referenceTo>adapps__OptimizerPlus_Path_Assistant__c</referenceTo>
        <relationshipLabel>Path Assistant Items</relationshipLabel>
        <relationshipName>Path_Assistant_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Path Assistant Item</label>
    <nameField>
        <label>Path Assistant Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Path Assistant Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>